<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/normal_space"
        android:text="@string/introduction"
        android:textSize="@dimen/bigger_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/image_size"
        android:contentDescription="@string/image_description"
        android:paddingBottom="@dimen/normal_space"
        android:scaleType="centerCrop"
        android:src="@drawable/book_of_henrykow" />

    <EditText
        android:id="@+id/name_view"
        style="@style/EditablesStyle"
        android:hint="@string/name_hint"
        android:inputType="textCapWords" />
</merge>